# power-meter-consumer

./: README.md  README_code.md  README_power_meter.md  debug_serial.py  main.py  pyproject.toml  setup_virtual_ports.sh
readme/: COMPLIANCE_ANALYSIS.md  H755ZIQ_cubemxmd  H755ZIQ_fixes.md  IMPLEMENTATION_STATUS.md  L476RG_cubemx.md  README.md  README_hardware.md  power_meter.md  sensors.md  simulator.md  struct_padding.md  vref.md
research/: one_phase.py
src/: config.py  main.c  main.py  power_playground.py  receiver.py  utils.py
src/analytics/: __init__.py  analytics.py  plots.py
src/receiver/: __init__.py  receiver.py
src/scripts/: run_stm32_simulator.py  run_ui_playground.py  simulator_config.py
stm32/: main.c  stm32l4xx_it.c
stm32/H755ZIQ/: CACHE_DMA_RESEARCH.md  H755_README.md  README_SETUP.md
stm32/H755ZIQ/project/nucleo-h755ziq-power-meter/CM7/: nucleo-h755ziq-power-meter_CM7.launch
stm32/H755ZIQ/project/nucleo-h755ziq-power-meter/CM7/Debug/: makefile  nucleo-h755ziq-power-meter_CM7.elf  nucleo-h755ziq-power-meter_CM7.list  nucleo-h755ziq-power-meter_CM7.map  objects.list
stm32/L476RG/: stm32l4xx_hal_msp.c
stm32/L476RG/project/nucleo-l476rg-adc-uart-producer/: nucleo-l476rg-adc-uart-producer.launch
stm32/L476RG/project/nucleo-l476rg-adc-uart-producer/Core/Src/: main.c
stm32/L476RG/project/nucleo-l476rg-adc-uart-producer/Debug/: makefile  nucleo-l476rg-adc-uart-producer.elf  nucleo-l476rg-adc-uart-producer.list  nucleo-l476rg-adc-uart-producer.map
tests/: __init__.py
(+126 files in other folders)
